# pawan

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PAWAN.md  PAWAN_TUI_IMPROVEMENT_PLAN.md  README.md  lcov.info  libbootstrap_tests.rlib  mise.toml  pawan.example.toml  pawan.toml
.cargo/: audit.toml  config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  deploy-vps.yml  deploy.yml  linux-arm64-zigbuild.yml  pages.yml  regression-smoke.yml  release.yml
.planning/intel/: 2026-04-11-ares-toolcoordinator-map.md  2026-04-11-ares-vulns.md  2026-04-11-pawan-rmcp-usage.md  2026-04-12-gdevelop-research.md  2026-04-12-kon-research.md
crates/pawan-aegis/: Cargo.toml  README.md
crates/pawan-aegis/src/: lib.rs
crates/pawan-api/: Cargo.toml  README.md
crates/pawan-api/src/: main.rs
crates/pawan-cli/: Cargo.toml  README.md  pawan-session.md
crates/pawan-cli/src/: lib.rs  main.rs
crates/pawan-cli/src/tui/: activity_panel.rs  app.rs  effects.rs  events.rs  fuzzy_search.rs  highlight.rs  input.rs  irc_panel.rs  layout.rs  mod.rs  model_catalog.rs  queue_panel.rs  render.rs  scrollbar.rs  session_panel.rs  slash_commands.rs  slash_handlers.rs  splash.rs  status_bar.rs  theme.rs  tool_display.rs  types.rs
crates/pawan-cli/src/tui/app/: async_ops.rs  constructors.rs  mod.rs  model_ops.rs  session_ops.rs  state.rs
crates/pawan-cli/src/tui/events/: default.rs  fuzzy.rs  global.rs  irc.rs  mod.rs  model_picker.rs  mouse.rs  permission.rs  welcome.rs
crates/pawan-cli/src/tui/render/: messages.rs  mod.rs  overlays.rs
crates/pawan-cli/src/tui/render/snapshots/: pawan__tui__render__tests__snapshot_tests__render_fuzzy_search_snapshot.snap  pawan__tui__render__tests__snapshot_tests__render_help_overlay_snapshot.snap  pawan__tui__render__tests__snapshot_tests__render_model_selector_snapshot.snap  pawan__tui__render__tests__snapshot_tests__render_permission_dialog_snapshot.snap  pawan__tui__render__tests__snapshot_tests__render_welcome_snapshot.snap  pawan_cli_lib__tui__render__tests__snapshot_tests__render_messages_snapshot.snap  pawan_cli_lib__tui__render__tests__snapshot_tests__render_model_selector_snapshot.snap  pawan_cli_lib__tui__render__tests__snapshot_tests__render_permission_dialog_snapshot.snap  pawan_cli_lib__tui__render__tests__snapshot_tests__render_welcome_snapshot.snap
crates/pawan-cli/src/tui/snapshots/: pawan__tui__render__tests__snapshot_tests__render_fuzzy_search_snapshot.snap  pawan__tui__render__tests__snapshot_tests__render_help_overlay_snapshot.snap  pawan__tui__render__tests__snapshot_tests__render_model_selector_snapshot.snap  pawan__tui__render__tests__snapshot_tests__render_permission_dialog_snapshot.snap  pawan_cli_lib__tui__render__tests__snapshot_tests__render_messages_snapshot.snap  pawan_cli_lib__tui__render__tests__snapshot_tests__render_model_selector_snapshot.snap  pawan_cli_lib__tui__render__tests__snapshot_tests__render_welcome_snapshot.snap
crates/pawan-cli/tests/: cli_tests.rs  regression_smoke.rs  tui_headless_tests.rs  tui_types_tests.rs
crates/pawan-cli/tests/snapshots/: tui_headless_tests__slash_model_picker_real_pty.snap
crates/pawan-core/: Cargo.toml  README.md
crates/pawan-core/src/: bootstrap.rs  compaction.rs  credentials.rs  eruka_bridge.rs  handoff.rs  init.rs  injection_detector.rs  lib.rs  memory.rs  memory_fence.rs  skill_distillation.rs  skills.rs  subagent.rs  tasks.rs
crates/pawan-core/src/agent/: construction.rs  definitions.rs  events.rs  execute.rs  git_session.rs  irc.rs  mod.rs  mod_temp.rs  pool.rs  preflight.rs  session.rs  types.rs
crates/pawan-core/src/agent/backend/: ares_backend.rs  lancor.rs  mock.rs  mod.rs  ollama.rs  openai_compat.rs
crates/pawan-core/src/config/: defaults.rs  healing.rs  mcp.rs  migration.rs  mod.rs  pawan.rs  permissions.rs  prompt.rs  provider.rs  routing.rs  target.rs  tests.rs  tui.rs
crates/pawan-core/src/coordinator/: mod.rs  types.rs
crates/pawan-core/src/healing/: mod.rs
crates/pawan-core/src/tools/: agent.rs  ares_bridge.rs  ares_bridge_tests.rs  bash.rs  batch.rs  deagle.rs  edit.rs  edit_tests.rs  file.rs  git.rs  lsp_tool.rs  mise.rs  mod.rs  native.rs  native_search.rs  rmux.rs  search.rs  task.rs
crates/pawan-core/src/tools/git/: branch.rs  diff.rs  log.rs  mod.rs  staging.rs  status.rs
crates/pawan-core/tests/: eruka_tests.rs  integration.rs  live_ollama.rs  rmux_live.rs  session_lifecycle.rs
crates/pawan-mcp/: Cargo.toml  README.md
crates/pawan-mcp/src/: bridge.rs  lib.rs  manager.rs  server.rs  thulp_bridge.rs
crates/pawan-web/: Cargo.toml  README.md
crates/pawan-web/src/: main.rs  sessions.rs
docs/: AUDIT_REPORT.md  config.toml
docs/content/: architecture.md  commands.md  guide.md  tools.md  triage.md
docs/demos/: demo-code-analysis.cast  demo-multi-step.cast  demo-web-search.cast  pawan-coding-mistral.cast  pawan-eruka-memory.cast  pawan-full-stack.cast  pawan-web-search.cast
docs/public/: index.html  robots.txt  sitemap.xml  style.css
docs/public/commands/: index.html
docs/public/guide/: index.html
docs/public/tools/: index.html
docs/sass/: style.scss
docs/templates/: base.html  index.html  page.html
grind/: Cargo.toml
grind/avl_tree/src/: lib.rs
grind/bloom_filter/src/: lib.rs
grind/dsu/src/: lib.rs
grind/fenwick/: Cargo.toml
grind/fenwick/src/: lib.rs
grind/interval_tree/: Cargo.toml
grind/interval_tree/src/: lib.rs
grind/leftist_heap/: Cargo.toml
grind/leftist_heap/src/: lib.rs
grind/lru_cache/src/: lib.rs
grind/pairing_heap/: Cargo.toml
grind/pairing_heap/src/: lib.rs
grind/radix_tree/: Cargo.toml
grind/radix_tree/src/: lib.rs
grind/rope/: Cargo.toml
grind/rope/src/: lib.rs
grind/segment_tree/src/: lib.rs
grind/skip_list/: Cargo.toml
grind/skip_list/src/: lib.rs
grind/splay_tree/: Cargo.toml
grind/splay_tree/src/: lib.rs
grind/suffix_array/: Cargo.toml
grind/treap/: Cargo.toml
scripts/: pawan-task.sh  release-storage-preflight.sh
src/tools/: serper.rs
(+4 files in other folders)
