# Pawan workspace configuration
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/dirmacs/pawan"
authors = ["Dirmacs <build@dirmacs.com>"]

[workspace.dependencies]
# Internal crates
pawan-core = { version = "0.2.1", path = "crates/pawan-core" }
pawan-mcp = { version = "0.2.1", path = "crates/pawan-mcp" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Async
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2.0"

# Observability
tracing = "0.1"

# IDs & time
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
