# Pawan workspace configuration
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/dirmacs/pawan"
authors = ["Dirmacs <build@dirmacs.com>"]

[workspace.dependencies]
# Internal crates
pawan-core = { version = "0.3.1", path = "crates/pawan-core" }
pawan-mcp = { version = "0.3.1", path = "crates/pawan-mcp" }

# Thulp — DRY: reuse tool types + skill file parsing instead of duplicating
thulp-core = "0.3"
thulp-skill-files = "0.3"

# Thulpoff — skill distillation from agent sessions
thulpoff-core = { version = "0.1", path = "/opt/thulpoff/crates/thulpoff-core" }
thulpoff-engine = { version = "0.1", path = "/opt/thulpoff/crates/thulpoff-engine" }

# Ares — composable LLM backends, tool coordination, agent primitives
# Use lean feature set (no postgres/web server) for pawan library consumption.
ares-server = { version = "0.7", path = "/opt/ares", default-features = false, features = ["openai", "ollama"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Async
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2.0"

# Observability
tracing = "0.1"

# IDs & time
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
