# Pawan workspace configuration
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.5.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/dirmacs/pawan"
authors = ["Dirmacs <build@dirmacs.com>"]
[workspace.dependencies]
# Internal crates
pawan-core = { version = "0.5.2", path = "crates/pawan-core" }
pawan-mcp = { version = "0.5.2", path = "crates/pawan-mcp" }
# Thulp — DRY: reuse tool types + skill file parsing instead of duplicating
# 0.3.2+ required for ToolDefinition::to_mcp_input_schema()
thulp-core = "0.3.2"
thulp-skill-files = "0.3"
# thulp-skills: multi-step skill execution framework (timeout, retry, context)
thulp-skills = "0.3"
# thulp-query: DSL for filtering/searching tools by criteria
thulp-query = "0.3"

# Thulpoff — skill distillation from agent sessions
thulpoff-core = { version = "0.1" }
thulpoff-engine = { version = "0.1" }

# Ares — composable LLM backends, tool coordination, agent primitives.
# Lean feature set: openai + ollama only, no postgres / no web server.
# Version history: 0.7.3 dropped compile-time sqlx::query! macros (downstream
# crates no longer need DATABASE_URL or a .sqlx cache to build); 0.7.5 then
# decoupled the `mcp` feature from `postgres` so library consumers can pull in
# MCP protocol/client/registry/extension/tool plumbing without dragging sqlx
# into their dep graph (the MCP server itself still needs both features). 0.7.4
# was a coarse coupling that never shipped to crates.io, superseded by 0.7.5.
ares-server = { version = "0.7.5", default-features = false, features = ["openai", "ollama"] }

# Lancor — llama.cpp toolkit (API client + HuggingFace Hub + server orchestration)
# Used by the optional `lancor` backend feature for local inference. Limitation:
# lancor's chat client is text-only (no native tool calling). For tool-using
# agents against a local llama.cpp server, prefer pawan's openai_compat backend
# pointed at the server's OpenAI-compatible endpoint.
lancor = "0.2"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# HTTP
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }

# Async
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2.0"

# Observability
tracing = "0.1"

# IDs & time
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }


# Shared utility deps (used by 2+ crates)
which = "8"
dirs = "6.0"
dotenvy = "0.15"
tempfile = "3.23"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true


[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.test]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256
split-debuginfo = "unpacked"

[profile.test.package."*"]
opt-level = 2
debug = false