[package]
name = "pawan-aegis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pawan-Aegis integration — generate pawan.toml from aegis manifests"
publish = true
keywords = ["aegis", "config", "ai", "agent"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
