[package]
name = "pawan-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pawan (पवन) — CLI coding agent binary"
keywords = ["cli", "coding", "agent", "ai", "self-healing"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pawan"
path = "src/main.rs"

[features]
default = ["tui", "mcp"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tui-textarea"]
mcp = ["dep:pawan-mcp"]

[dependencies]
# Internal
pawan-core = { workspace = true }
pawan-mcp = { workspace = true, optional = true }

# Core from workspace
tokio = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "color", "env"] }
clap_complete = "4.5"
owo-colors = "4.1"
dialoguer = "0.11"
dirs = "5.0"
dotenvy = "0.15"
indicatif = "0.17"

# TUI (optional but default)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
tui-textarea = { version = "0.7", optional = true }

# Terminal output
syntect = "5.2"
termimad = "0.30"

[dev-dependencies]
tempfile = "3.23"
assert_cmd = "2.0"
predicates = "3.1"
