[package]
name = "pawan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pawan (पवन) — CLI coding agent binary"
keywords = ["cli", "coding", "agent", "ai", "self-healing"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "pawan_cli_lib"
path = "src/lib.rs"

[[bin]]
name = "pawan"
path = "src/main.rs"

[features]
default = ["tui", "mcp"]
tui = [
    "dep:ratatui",
    "dep:crossterm",
    "dep:ratatui-textarea",
    "dep:tui-markdown",
    "dep:tui-syntax-highlight",
    "dep:ratatui-toaster",
    "dep:ratatui-cheese",
    "dep:tui-scrollview",
    "dep:tui-overlay",
]
mcp = ["dep:pawan-mcp"]

[dependencies]
# Internal
pawan-core = { workspace = true }
pawan-mcp = { workspace = true, optional = true }

# Core from workspace
tokio = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
which = { workspace = true }
regex = "1.12"

# CLI
clap = { version = "4.5", features = ["derive", "color", "env"] }
clap_complete = "4.5"
owo-colors = "4.1"
dialoguer = "0.12"
dirs = { workspace = true }
dotenvy = { workspace = true }
indicatif = "0.18"

# TUI (optional but default)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
ratatui-textarea = { version = "0.9", optional = true }
tui-markdown = { version = "0.3.7", optional = true }
tui-syntax-highlight = { version = "0.2.0", optional = true }
ratatui-toaster = { version = "0.1.3", optional = true }
ratatui-cheese = { version = "0.6.0", optional = true }
tui-scrollview = { version = "0.6.4", optional = true }
tui-overlay = { version = "0.1.2", optional = true }
arc-swap = "1.7"
color-eyre = "0.6"
getrandom = "0.2"

# Terminal output
syntect = { version = "5.2", default-features = false, features = ["default-fancy", "onig"] }
tracing = { workspace = true }
termimad = "0.34"
atty = "0.2.14"

# Clipboard support for /dump
arboard = "3.4"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0"
predicates = "3.1"
