[package]
name = "pawan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pawan (पवन) — Core library: agent, tools, config, healing"
keywords = ["cli", "coding", "agent", "ai", "self-healing"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "pawan"
path = "src/lib.rs"

[features]
default = []
# Enable ares-server integration: LLM backends, tool registry bridge,
# agent primitives (ToolCoordinator, ConfigurableAgent, loop detection,
# crash recovery). Adds ~20% compile time but unlocks major code reuse.
#
# ares-server 0.7.5 is on crates.io as of 2026-04-11. Pawan pulls the
# lean feature set (openai + ollama, no postgres/sqlx compile-time macros,
# no mcp coupling). Version pinned via workspace dependency table.
ares = ["dep:ares-server"]

[dependencies]
# Core from workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Binary detection for native tools
which = "7"

# Home directory resolution
dirs = "5.0"

# File operations
glob = "0.3"
ignore = "0.4"
walkdir = "2.5"
similar = "2.6"
regex = "1.12"
rand = "0.8"

# Git-backed sessions (conversation trees)
git2 = "0.20"

# Beads-style task tracking (SQLite-backed)
rusqlite = { version = "0.34", features = ["bundled"] }

# Deagle code intelligence — embedded directly so pawan no longer
# requires the `deagle` binary on PATH. Adds tree-sitter parsers for
# 9 languages (~30-50MB binary bloat) but eliminates one external dep.
# `pattern` feature enables ast-grep structural search; `text-search`
# enables FTS5 keyword indexing via the grep-* crates.
# 0.1.5 adds tree-sitter-ruby for Ruby/Rake/gemspec files.
deagle-core = "0.1.5"
deagle-parse = { version = "0.1.5", features = ["pattern", "text-search"] }

# Parallel walking for the embedded deagle_map implementation
rayon = "1.10"

# Thulp — reuse tool types + skill file parsing (DRY)
thulp-core = { workspace = true }
thulp-skill-files = { workspace = true }
thulp-skills = { workspace = true }
thulp-query = { workspace = true }

# Thulpoff — skill distillation from agent sessions
thulpoff-core = { workspace = true }
thulpoff-engine = { workspace = true }

# Ares — composable LLM backends + tool coordination (optional, feature-gated)
# Renamed to `ares` so existing bridge code (ares_backend.rs, ares_bridge.rs)
# can use `ares::llm::...` etc. without changes.
ares-server = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.23"
tokio-test = "0.4"
