[package]
name = "pawan-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pawan MCP client integration — connect to MCP servers and bridge tools"
keywords = ["mcp", "tools", "ai", "agent"]

[dependencies]
pawan-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

futures = { workspace = true }

# MCP client + server
rmcp = { version = "0.12", features = ["client", "server", "transport-io", "transport-child-process"] }
schemars = "1.0"
toon-format = { version = "0.4.4", default-features = false }
